{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 475,
  "lineage": "2ef03a83-1203-95eb-006a-ece410ff2724",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09daa4f979faffd5c",
            "arn": "arn:aws:ec2:us-east-1:794038228127:elastic-ip/eipalloc-09daa4f979faffd5c",
            "association_id": "eipassoc-04dbdc2c9ad4eb7bf",
            "domain": "vpc",
            "id": "eipalloc-09daa4f979faffd5c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0360178e1e13a7684",
            "private_dns": "ip-10-0-10-188.ec2.internal",
            "private_ip": "10.0.10.188",
            "public_dns": "ec2-44-220-2-175.compute-1.amazonaws.com",
            "public_ip": "44.220.2.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-nat-eip-1",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-nat-eip-1",
              "Project": "rapro"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:internet-gateway/igw-0d308031a0f635bfd",
            "id": "igw-0d308031a0f635bfd",
            "owner_id": "794038228127",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-igw",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-igw",
              "Project": "rapro"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-alb/a63e15c80482ba7a",
            "arn_suffix": "app/rapro-prod-alb/a63e15c80482ba7a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rapro-prod-alb-1189160617.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-alb/a63e15c80482ba7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rapro-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03e197eaf22577163"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088cff0339d0ad563"
              },
              {
                "subnet_id": "subnet-0dece0809bacad08f"
              }
            ],
            "subnets": [
              "subnet-088cff0339d0ad563",
              "subnet-0dece0809bacad08f"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-alb",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-alb",
              "Project": "rapro"
            },
            "vpc_id": "vpc-09aa8258d53221483",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.static_assets",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-staging/39aa6e17719ee474",
            "arn_suffix": "app/rapro-prod-staging/39aa6e17719ee474",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rapro-prod-staging-573782540.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-staging/39aa6e17719ee474",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rapro-prod-staging",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03e197eaf22577163"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088cff0339d0ad563"
              },
              {
                "subnet_id": "subnet-0dece0809bacad08f"
              }
            ],
            "subnets": [
              "subnet-088cff0339d0ad563",
              "subnet-0dece0809bacad08f"
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-staging",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-staging",
              "Project": "rapro"
            },
            "vpc_id": "vpc-09aa8258d53221483",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-tg/b05989e6eaf56744",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-alb/a63e15c80482ba7a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-http-listener",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-http-listener",
              "Project": "rapro"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.static_assets",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "staging_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-staging/39aa6e17719ee474/6c9ca42c3e842316",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-staging/d7e6b54972b84f7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-staging/39aa6e17719ee474/6c9ca42c3e842316",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-staging/39aa6e17719ee474",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "RetirementAdvisorPro"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.staging",
            "aws_lb_target_group.frontend_staging",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-tg/658905bfef603071",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df/76ee8e5f8714b2a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/admin/*",
                      "/api/*",
                      "/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df/76ee8e5f8714b2a6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df",
            "priority": 100,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-api-http-rule",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-api-http-rule",
              "Project": "rapro"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.static_assets",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_api_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-staging/e45bf1413d4affa0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-staging/39aa6e17719ee474/6c9ca42c3e842316/8b3a2f170e9cecb9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/admin/*",
                      "/api/*",
                      "/media/*",
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-staging/39aa6e17719ee474/6c9ca42c3e842316/8b3a2f170e9cecb9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-staging/39aa6e17719ee474/6c9ca42c3e842316",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "RetirementAdvisorPro"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.staging",
            "aws_lb_listener.staging_http",
            "aws_lb_listener.staging_https",
            "aws_lb_target_group.backend_staging",
            "aws_lb_target_group.frontend_staging",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static_files",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-tg/658905bfef603071",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df/83be059da9789b68",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/media/*",
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener-rule/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df/83be059da9789b68",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:listener/app/rapro-prod-alb/a63e15c80482ba7a/54c37ae09455c5df",
            "priority": 300,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-static-files-rule",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-static-files-rule",
              "Project": "rapro"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_listener.https",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_s3_bucket.static_assets",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-tg/658905bfef603071",
            "arn_suffix": "targetgroup/rapro-prod-backend-tg/658905bfef603071",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/api/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-tg/658905bfef603071",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-alb/a63e15c80482ba7a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rapro-prod-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-backend-tg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-backend-tg",
              "Project": "rapro"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-staging/e45bf1413d4affa0",
            "arn_suffix": "targetgroup/rapro-prod-backend-staging/e45bf1413d4affa0",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-backend-staging/e45bf1413d4affa0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-staging/39aa6e17719ee474"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rapro-prod-backend-staging",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-backend-staging",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-backend-staging",
              "Project": "rapro"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "celery_flower",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-flower-tg/270663156c74fb09",
            "arn_suffix": "targetgroup/rapro-prod-flower-tg/270663156c74fb09",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-flower-tg/270663156c74fb09",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rapro-prod-flower-tg",
            "port": 5555,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-flower-tg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-flower-tg",
              "Project": "rapro"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-tg/b05989e6eaf56744",
            "arn_suffix": "targetgroup/rapro-prod-frontend-tg/b05989e6eaf56744",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-tg/b05989e6eaf56744",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-alb/a63e15c80482ba7a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rapro-prod-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-frontend-tg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-frontend-tg",
              "Project": "rapro"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-staging/d7e6b54972b84f7f",
            "arn_suffix": "targetgroup/rapro-prod-frontend-staging/d7e6b54972b84f7f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:794038228127:targetgroup/rapro-prod-frontend-staging/d7e6b54972b84f7f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:794038228127:loadbalancer/app/rapro-prod-staging/39aa6e17719ee474"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rapro-prod-frontend-staging",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-frontend-staging",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-frontend-staging",
              "Project": "rapro"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09daa4f979faffd5c",
            "association_id": "eipassoc-04dbdc2c9ad4eb7bf",
            "connectivity_type": "public",
            "id": "nat-01f5365a4c65cd5a7",
            "network_interface_id": "eni-0360178e1e13a7684",
            "private_ip": "10.0.10.188",
            "public_ip": "44.220.2.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dece0809bacad08f",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-nat-gateway-1",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-nat-gateway-1",
              "Project": "rapro"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:route-table/rtb-0d48664edcebfde2e",
            "id": "rtb-0d48664edcebfde2e",
            "owner_id": "794038228127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-rt",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-rt",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:route-table/rtb-0c8cec57ecb1453a4",
            "id": "rtb-0c8cec57ecb1453a4",
            "owner_id": "794038228127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f5365a4c65cd5a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-rt-1",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-rt-1",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:route-table/rtb-0fb06a963e27d497c",
            "id": "rtb-0fb06a963e27d497c",
            "owner_id": "794038228127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f5365a4c65cd5a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-rt-2",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-rt-2",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:route-table/rtb-07e936fd5a79435d5",
            "id": "rtb-07e936fd5a79435d5",
            "owner_id": "794038228127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d308031a0f635bfd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-rt",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-rt",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b477744aab407495",
            "route_table_id": "rtb-0d48664edcebfde2e",
            "subnet_id": "subnet-0e611cf1ba5d69e09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ac196b8d073a63",
            "route_table_id": "rtb-0d48664edcebfde2e",
            "subnet_id": "subnet-00b47391dc20a3c1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8b6cfbd2537a17",
            "route_table_id": "rtb-0c8cec57ecb1453a4",
            "subnet_id": "subnet-04350b1e31f9f0439"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02537535bc7a662e3",
            "route_table_id": "rtb-0fb06a963e27d497c",
            "subnet_id": "subnet-0491a088b456eee93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013f0b0b99baade26",
            "route_table_id": "rtb-07e936fd5a79435d5",
            "subnet_id": "subnet-0dece0809bacad08f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcd29043f3f2f99b",
            "route_table_id": "rtb-07e936fd5a79435d5",
            "subnet_id": "subnet-088cff0339d0ad563"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-03e197eaf22577163",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e197eaf22577163",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rapro-prod-alb20250903134752310100000007",
            "name_prefix": "rapro-prod-alb",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-alb-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-alb-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codebuild",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-009d7ce20fff40655",
            "description": "Security group for CodeBuild projects",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009d7ce20fff40655",
            "ingress": [],
            "name": "rapro-prod-codebuild20250903134758427600000009",
            "name_prefix": "rapro-prod-codebuild",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-codebuild-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-codebuild-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-0bd802a9db8e9f5c9",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd802a9db8e9f5c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend port access from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e197eaf22577163"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Celery Flower monitoring access",
                "from_port": 5555,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e197eaf22577163"
                ],
                "self": false,
                "to_port": 5555
              },
              {
                "cidr_blocks": [],
                "description": "Frontend port access from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e197eaf22577163"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Inter-container communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "rapro-prod-ecs-tasks2025090313480073570000000c",
            "name_prefix": "rapro-prod-ecs-tasks",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecs-tasks-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecs-tasks-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-09f5a4dfdedce043a",
            "description": "Security group for ElastiCache Redis cluster",
            "egress": [],
            "id": "sg-09f5a4dfdedce043a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis access from ECS tasks",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd802a9db8e9f5c9"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "rapro-prod-elasticache20250903134804543600000011",
            "name_prefix": "rapro-prod-elasticache",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-elasticache-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-elasticache-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-0293139127fd6214c",
            "description": "Security group for RDS PostgreSQL instance",
            "egress": [],
            "id": "sg-0293139127fd6214c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL access from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd802a9db8e9f5c9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rapro-prod-rds20250903134805329300000012",
            "name_prefix": "rapro-prod-rds",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-rds-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-rds-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:security-group/sg-0b326368f609fed8c",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-0b326368f609fed8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rapro-prod-vpc-endpoint20250903134756379900000008",
            "name_prefix": "rapro-prod-vpc-endpoint",
            "owner_id": "794038228127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-vpc-endpoint-sg",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-vpc-endpoint-sg",
              "Project": "rapro"
            },
            "timeouts": null,
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-0e611cf1ba5d69e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e611cf1ba5d69e09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-subnet-1",
              "Project": "rapro",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-subnet-1",
              "Project": "rapro",
              "Type": "Database"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-00b47391dc20a3c1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b47391dc20a3c1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-subnet-2",
              "Project": "rapro",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-database-subnet-2",
              "Project": "rapro",
              "Type": "Database"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-04350b1e31f9f0439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04350b1e31f9f0439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-subnet-1",
              "Project": "rapro",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-subnet-1",
              "Project": "rapro",
              "Type": "Private"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-0491a088b456eee93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0491a088b456eee93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-subnet-2",
              "Project": "rapro",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-private-subnet-2",
              "Project": "rapro",
              "Type": "Private"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-0dece0809bacad08f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dece0809bacad08f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-subnet-1",
              "Project": "rapro",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-subnet-1",
              "Project": "rapro",
              "Type": "Public"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:subnet/subnet-088cff0339d0ad563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088cff0339d0ad563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038228127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-subnet-2",
              "Project": "rapro",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-public-subnet-2",
              "Project": "rapro",
              "Type": "Public"
            },
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc/vpc-09aa8258d53221483",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f00354f51a9abae3",
            "default_route_table_id": "rtb-0f10a61431e885b90",
            "default_security_group_id": "sg-06a4e672a29dfcf21",
            "dhcp_options_id": "dopt-07f8fcdc9d5f35077",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09aa8258d53221483",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f10a61431e885b90",
            "owner_id": "794038228127",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-vpc",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-vpc",
              "Project": "rapro"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-09ad019eb8acd49a4",
            "dns_entry": [
              {
                "dns_name": "vpce-09ad019eb8acd49a4-6gh6pwzw.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09ad019eb8acd49a4-6gh6pwzw-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09ad019eb8acd49a4-6gh6pwzw-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z029822415BLYNQXL9MU3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09ad019eb8acd49a4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-063f0bf322852b5d8",
              "eni-07615ffcd979d0419"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.171",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.18",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ec2-messages-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ec2-messages-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-0f461bf344629f679",
            "dns_entry": [
              {
                "dns_name": "vpce-0f461bf344629f679-oke6o9bq.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f461bf344629f679-oke6o9bq-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f461bf344629f679-oke6o9bq-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f461bf344629f679",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04756e8884d3f6380",
              "eni-0746384745d50e1a6"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":[\"ecr:GetDownloadUrlForLayer\",\"ecr:GetAuthorizationToken\",\"ecr:BatchGetImage\",\"ecr:BatchCheckLayerAvailability\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.163",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.6",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecr-api-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecr-api-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecr_endpoint_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-00599a4e9b09e98ef",
            "dns_entry": [
              {
                "dns_name": "vpce-00599a4e9b09e98ef-dij0yymq.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00599a4e9b09e98ef-dij0yymq-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00599a4e9b09e98ef-dij0yymq-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00599a4e9b09e98ef",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0505d1882f45974ea",
              "eni-0b36d9d20336704a8"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":[\"ecr:GetDownloadUrlForLayer\",\"ecr:GetAuthorizationToken\",\"ecr:BatchGetImage\",\"ecr:BatchCheckLayerAvailability\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.223",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.173",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecr-dkr-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ecr-dkr-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecr_endpoint_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-06837286aaa0c494f",
            "dns_entry": [
              {
                "dns_name": "vpce-06837286aaa0c494f-xyluh1yh.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06837286aaa0c494f-xyluh1yh-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06837286aaa0c494f-xyluh1yh-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08960461FCI685I8Q1YP"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09945031M0O0A3ZU96ZR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06837286aaa0c494f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-044a64c2d7f5f6a9c",
              "eni-0629a1283d90aa016"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.195",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.126",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-kms-endpoint",
              "Project": "rapro",
              "Purpose": "Support encrypted secrets and parameters"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-kms-endpoint",
              "Project": "rapro",
              "Purpose": "Support encrypted secrets and parameters"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-040cf67538f9e17fa",
            "dns_entry": [
              {
                "dns_name": "vpce-040cf67538f9e17fa-8nng37rf.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040cf67538f9e17fa-8nng37rf-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040cf67538f9e17fa-8nng37rf-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-040cf67538f9e17fa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-034890f2227df990a",
              "eni-0fa8be03227c9ece5"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.159",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.166",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-logs-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-logs-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-074e3532f9ce46a32",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-074e3532f9ce46a32",
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e936fd5a79435d5",
              "rtb-0c8cec57ecb1453a4",
              "rtb-0fb06a963e27d497c"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-s3-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-s3-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-0e1390aae0b6b8af9",
            "dns_entry": [
              {
                "dns_name": "vpce-0e1390aae0b6b8af9-2ggc2ehi.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e1390aae0b6b8af9-2ggc2ehi-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e1390aae0b6b8af9-2ggc2ehi-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0896207D6D8V0980VIM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e1390aae0b6b8af9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0783abb03ca54c675",
              "eni-07c7f439838b80ceb"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.36",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.134",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-secrets-manager-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for Secrets Manager access"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-secrets-manager-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for Secrets Manager access"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-0234fa21177fc8896",
            "dns_entry": [
              {
                "dns_name": "vpce-0234fa21177fc8896-gknpeeae.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0234fa21177fc8896-gknpeeae-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0234fa21177fc8896-gknpeeae-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z089604228VSV0LXGZO15"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z0896898WWH8O0MJ0EX5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0234fa21177fc8896",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0cde2f53d35fe434c",
              "eni-0f9d2882660954622"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.82",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.220",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ssm-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for Parameter Store access"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ssm-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for Parameter Store access"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-00cff40659a7547d7",
            "dns_entry": [
              {
                "dns_name": "vpce-00cff40659a7547d7-7t1h8g9h.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00cff40659a7547d7-7t1h8g9h-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00cff40659a7547d7-7t1h8g9h-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1044866C3E1O8PM05LS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00cff40659a7547d7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b26b200101ecb13",
              "eni-00feb004f1cfe94cd"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.228",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.59",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ssm-messages-endpoint",
              "Project": "rapro"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-ssm-messages-endpoint",
              "Project": "rapro"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038228127:vpc-endpoint/vpce-0f28a6d5d2202d2d4",
            "dns_entry": [
              {
                "dns_name": "vpce-0f28a6d5d2202d2d4-weco5lcc.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f28a6d5d2202d2d4-weco5lcc-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f28a6d5d2202d2d4-weco5lcc-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10448893JFXH8BGUOS1"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z08960182Z8D8G5PRCYJN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f28a6d5d2202d2d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b2d2b01c9e6ca2cc",
              "eni-0ed171afcc2b42c17"
            ],
            "owner_id": "794038228127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b326368f609fed8c"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.97",
                "subnet_id": "subnet-04350b1e31f9f0439"
              },
              {
                "ipv4": "10.0.21.73",
                "subnet_id": "subnet-0491a088b456eee93"
              }
            ],
            "subnet_ids": [
              "subnet-04350b1e31f9f0439",
              "subnet-0491a088b456eee93"
            ],
            "tags": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-sts-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for IAM operations"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rapro-prod-sts-endpoint",
              "Project": "rapro",
              "Purpose": "Reduce NAT Gateway data transfer for IAM operations"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09aa8258d53221483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}